[package]
name = "neo_qube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_irc = { version = "5.0.1", package = "twitch-irc" }
env-file-reader = { version = "0.3.0" }
obws = "0.11.5"
twitch_api = "0.7.0-rc.7"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
serenity = "0.12.1"
